fix: :lipstick: Fixed scrollbar on chromium

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,7 +8,7 @@ body {
 	padding: 0;
 	margin: 0;
 
-	width: 100dvw;
+	// width: 100vw;
 }
 
 body,
